Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19428

Images in SG Text element are not rendered

    XMLWordPrintable

Details

    • 0e2aaa5a28349d7c906005ae12dd8656ca07b53e

    Description

      Run the rssnews demo using scenegraph:
      QMLSCENE_IMPORT_NAME=quick1 qmlscene demos/declarative/rssnews/rssnews.qml

      None of the images in the displayed HTML article are visible. Probably due to QDeclarativePixmap loading a QSGTexture rather than a QPixmap

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes