Fix images not being rendered when embedded in a rich text.

In that case the whole text is cached in a QImage, but that cache was
not updated when the embedded image was finished to be loaded.

Depends on ac7dcaec90d7603cd4dd80cdb3dcbdc689f376c2.

Task-number: QTBUG-19428